--- a/python/python.org
+++ b/python/python.org
@@ -220,3 +220,24 @@ cd ~/tmp/ansible-2.6.4
 #+BEGIN_SRC 
 curl -s -N  --insecure   -H "X-Vault-Token: s.eUF4WdsfdsafdasfdasZe"     -X GET     https://atksv.mywire.org:8886/v1/kv/data/analytics/sit/jupyterhub | python -c 'import json,sys;print json.load(sys.stdin)["data"]["data"]["jupyterhub_config.py"]'
 #+END_SRC
+
+** jupyterhub dummyauthenticator
+
+#+BEGIN_SRC 
+pip install jupyterhub-dummyauthenticator
+#+END_SRC
+
+jupyterhub_config.py
+#+BEGIN_SRC 
+c.JupyterHub.authenticator_class = 'dummyauthenticator.DummyAuthenticator'
+c.DummyAuthenticator.password = "somepassword"
+#+END_SRC
+
+** jupyterhub dockerspawner.SwarmSpawner unable to find service
+
+It is mostly because the underlying container is unable to spin up.
+The container entrypoint is jupyter-labhub. The command is only installed with jupyterlab=1.2.* .
+
+#+BEGIN_SRC 
+pip install jupyterlab==1.2.8
+#+END_SRC
