--- a/java/springbootngcd.org
+++ b/java/springbootngcd.org
@@ -1146,18 +1146,18 @@ curl -k -O https://github.com/sass/node-sass/releases/download/v4.14.1/linux-x64
 			.and()
 			.and()
 					.inMemoryAuthentication()
-					.withUser("adaeditor").password("{noop}ada-editors-1").roles("EDITOR")
+					.withUser("editor").password("{noop}editors-1").roles("EDITOR")
 					.and()
-					.withUser("adaadmin").password("{noop}ada-cap-admin").roles("ADMIN");
+					.withUser("admin").password("{noop}cap-admin").roles("ADMIN");
 
 		}else{
 			auth
 					.inMemoryAuthentication()
 					.withUser("readonly").password("{noop}readonly1").roles("USER")
 					.and()
-					.withUser("adaeditor").password("{noop}ada-editors-1").roles("EDITOR")
+					.withUser("editor").password("{noop}editors-1").roles("EDITOR")
 					.and()
-					.withUser("adaadmin").password("{noop}ada-cap-admin").roles("ADMIN");
+					.withUser("admin").password("{noop}cap-admin").roles("ADMIN");
 		}
 	}
 	
